fix: java 8 replace map.of to Collections.emptyMap